# qb-passion-project

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  QB_NFL_Analysis_v3.pptx  README.md  STRAT 412 W2026 Passion Project Instructions.md  checkpoint3.md  checkpoint4.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: qb_analysis.db
data/processed/: qb data schema.csv  qb_clusters.csv  qb_cohort.csv  qb_college_features.csv  qb_composite_scores.csv  qb_model_table.csv
data/raw/: nfl_passing_all.csv  nfl_rushing_all.csv  qbs_drafted.csv  sportradar_player_ids.json  sportradar_profiles.json  sportradar_teams.json  sportradar_teams_raw.json
data/raw/draft/: sportsref_download (1).xls  sportsref_download (10).xls  sportsref_download (11).xls  sportsref_download (12).xls  sportsref_download (13).xls  sportsref_download (14).xls  sportsref_download (15).xls  sportsref_download (2).xls  sportsref_download (3).xls  sportsref_download (4).xls  sportsref_download (5).xls  sportsref_download (6).xls  sportsref_download (7).xls  sportsref_download (8).xls  sportsref_download (9).xls  sportsref_download.xls
data/raw/passing/: sportsref_download (16).xls  sportsref_download (17).xls  sportsref_download (18).xls  sportsref_download (19).xls  sportsref_download (20).xls  (+19 more)
scripts/: 01_draft_list.py  02_nfl_passing_stats.py  03_build_cohort.py  03_filter_cohort.py  04_college_stats.py  05_nfl_rushing_stats.py  06_sportradar_college.py  07_feature_merge.py  08_clustering.py  09_composite_score.py  09_regression.py  10_build_sql.py  10_build_sql.sql
(+9 files in other folders)
