[project]
name = "qb-passion-project"
version = "0.1.0"
description = "STRAT 412 analysis pipeline for translating college QB traits into early NFL success."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "lxml",
    "rapidfuzz",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pyright",
    "python-dotenv",
    "python-pptx>=1.0.2",
]

[tool.uv]
package = false
